@@ -1,3 +1,14 @@
+2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[ftlint] Introduce quiet mode, remove extension guessing.
+
+	With so many supported font formats, it does not make sense to guess
+	the `ttf' or `ttc' extensions.
+
+	* src/ftlint.c (main): Add `-q' option and improve output formatting;
+	remove extension guessing.
+	(Usage): Document it.
+
 2021-06-15  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftdump.c (Print_Glyfs, Print_Programs): Handle empty glyphs.
@@ -10,7 +21,7 @@
 	the minimum and maximum value at the edges.  We calculate is as a
 	ratio of the integrals for the absolute second derivative and the
 	absolute first derivative.  It equals to 2.0 for bitmap fonts and
-	approahes this value for well hinted fonts.
+	approaches this value for well-hinted fonts.
 
 	* src/ftlint.c (Analyze): Implement it.
 	(main): Use it.
